--- a/ipynb/T02-Abstraction-and-Encapsulation.ipynb
+++ b/ipynb/T02-Abstraction-and-Encapsulation.ipynb
@@ -18,9 +18,9 @@
     "    - [`__init__` method](#t2__init)\n",
     "    - *[Exercise 1](#t2ex1)*\n",
     "- **[Abstraction and Encapsulation](#t2abs_enc)**\n",
-    "    - [Access Modifiers](#t2accessmod)\n",
     "    - *[Exercise 2](#t2ex2)*\n",
-    "- [Home Exercises](#t2hw)\n",
+    "    - [Access Modifiers](#t2accessmod)\n",
+    "    - *[Exercise 3](#t2ex3)*\n",
     "- [Exercises Solutions](#t2sol)\n"
    ]
   },
@@ -1244,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><br><a id='t2ex2'></a>\n",
+    "<br><br><a id='t2ex3'></a>\n",
     "◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾"
    ]
   },
