--- a/ipynb/T01-Introduction-to-OOP-in-Python.ipynb
+++ b/ipynb/T01-Introduction-to-OOP-in-Python.ipynb
@@ -1154,6 +1154,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>[back to the Exercise 1 ↥](#t1ex1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>[back to top ↥](#t1toc)"
    ]
   },
@@ -1241,6 +1248,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>[back to the Exercise 2 ↥](#t1ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>[back to top ↥](#t1toc)"
    ]
   },
@@ -1290,8 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼<br>\n",
-    "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼"
+    "<br>[back to the Exercise 3 ↥](#t1ex3)"
    ]
   },
   {
@@ -1299,6 +1312,14 @@
    "metadata": {},
    "source": [
     "[back to top ↥](#t1toc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼<br>\n",
+    "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼"
    ]
   }
  ],
