--- a/ipynb/T02-Abstraction-and-Encapsulation.ipynb
+++ b/ipynb/T02-Abstraction-and-Encapsulation.ipynb
@@ -1305,7 +1305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><br><a id='sol'></a>\n",
+    "<br><br><a id='t2sol'></a>\n",
     "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼<br>\n",
     "◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼◼"
    ]
@@ -1384,6 +1384,13 @@
    "metadata": {},
    "source": [
     "<br>[back to the Exercise 1 ↥](#t2ex1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>[back to top ↥](#t2toc)"
    ]
   },
   {
@@ -1497,6 +1504,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>[back to the Exercise 2 ↥](#t2ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>[back to top ↥](#t2toc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Exercise 3.1:**"
    ]
   },
@@ -1523,6 +1544,20 @@
    "outputs": [],
    "source": [
     "obj._Super__displayPrivateMembers()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>[back to the Exercise 3 ↥](#t2ex3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>[back to top ↥](#t2toc)"
    ]
   },
   {
