--- a/ipynb/T01-Introduction-to-OOP-in-Python.ipynb
+++ b/ipynb/T01-Introduction-to-OOP-in-Python.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "💡 <b>TIP</b><br>\n",
-    "  <i>In Exercises, when time permits, try to write the codes yourself, and do not copy it from the other cells.</i>\n"
+    "> <i>In Exercises, when time permits, try to write the codes yourself, and do not copy it from the other cells.</i>\n"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "Most programmers simply use the word \"**Class**\" for \"*Class object*\", and the word \"**Object**\" for \"*Instance object*\".<br>"
+    ">Most programmers simply use the word \"**Class**\" for \"*Class object*\", and the word \"**Object**\" for \"*Instance object*\".<br>"
    ]
   },
   {
@@ -682,7 +682,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "<i><b>self</b> is used to pass the (instance) object as an argument to the class.\n",
+    "> <i><b>self</b> is used to pass the (instance) object as an argument to the class.\n",
     "When you call a method using an object, it automatically pass the object name to the method as <b>the first argument</b>.</i>\n",
     "<br>\n",
     "We can call the instances method using the class name and passing the instance name as parameter:"
@@ -702,7 +702,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "We can also call the instances method using the instance name and `__class__`:"
+    "> We can also call the instances method using the instance name and `__class__`:"
    ]
   },
   {
