--- a/ipynb/T02-Abstraction-and-Encapsulation.ipynb
+++ b/ipynb/T02-Abstraction-and-Encapsulation.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "💡 <b>TIP</b><br>\n",
-    "  <i>In Exercises, when time permits, try to write the codes yourself, and do not copy it from the other cells.</i>\n"
+    "> <i>In Exercises, when time permits, try to write the codes yourself, and do not copy it from the other cells.</i>\n"
    ]
   },
   {
@@ -948,7 +948,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "We did not introduce the concepts of inheritance and derived class, yet. Those will be discussed in details in the next tutorial.<br>\n",
+    "> We did not introduce the concepts of inheritance and derived class, yet. Those will be discussed in details in the next tutorial.<br>\n",
     "At the moment, the general information about the inheritanc explained by your teacher is sufficient to understand the concept of the Protected Access Modifier."
    ]
   },
@@ -1013,7 +1013,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "In fact, this does not really prevent instance variables from accessing or modifying the instance. You can still perform the following operations:"
+    "> In fact, this does not really prevent instance variables from accessing or modifying the instance. You can still perform the following operations:"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
    "metadata": {},
    "source": [
     "<br>⚠ <b>NOTE</b><br>\n",
-    "Python does not have any mechanism that effectively restricts access to any instance variable or method. <br>\n",
+    "> Python does not have any mechanism that effectively restricts access to any instance variable or method. <br>\n",
     "**We can say that Python prescribes a convention of prefixing the name of the variable/method with a single or double underscore to emulate the behavior of protected and private access specifiers.**<br>\n",
     "It performs name mangling of private variables. Every member with a double underscore will be changed to `object._class__variable`. So, it can still be accessed from outside the class, but the practice should be refrained."
    ]
