--- a/ipynb/T02-OOP-in-Python-Part-1.ipynb
+++ b/ipynb/T02-OOP-in-Python-Part-1.ipynb
@@ -7,7 +7,7 @@
     "editable": false
    },
    "source": [
-    "# **Tutorial 02: Object Oriented Programming in Python (Part 1)** 👀\n",
+    "# **Tutorial 02: OOP in Python (Part 1)** 👀\n",
     "##### Abstraction and Encapsulation"
    ]
   },
