--- a/ipynb/T04-01-Practical-Examples-OOP-Part-1.ipynb
+++ b/ipynb/T04-01-Practical-Examples-OOP-Part-1.ipynb
@@ -619,7 +619,7 @@
     "editable": false
    },
    "source": [
-    "As every game will contain those steps, good design practice is to make a parent template class, that would contain all these **game loop** steps and run them accordingly. Then, we can ***inherit from such a class***, and ***extend*** and ***overload only the methods needed***.\n",
+    "As every game will contain those steps, good design practice is to make a parent template class, that would contain all these **game loop** steps and run them accordingly. Then, we can ***inherit from such a class***, and ***extend*** and ***override only the methods needed***.\n",
     "\n",
     "Since our first games will writing to console, we will start the game loop with draw, following with user input and finally updating the game states."
    ]
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -757,10 +757,10 @@
     "<a id='t4p1tegameclass'></a>\n",
     "##### **Test and Experiment**\n",
     "\n",
-    "Let's demonstrate the effectiveness of inheritance and overloading.\n",
+    "Let's demonstrate the effectiveness of inheritance and overriding.\n",
     "Assume you want to create a 'game' that does nothing except print welcoming message for the user, and lets him / her type whatever he / she wants until `quit` or `q` is typed.\n",
     "\n",
-    "Since, all of this is implemented in `Game` class, just create a child class and overload `intro()` method. You are encouraged to overload other methods as well and create something more exciting."
+    "Since, all of this is implemented in `Game` class, just create a child class and override `intro()` method. You are encouraged to override other methods as well and create something more exciting."
    ]
   },
   {
@@ -790,7 +790,7 @@
     "# class HelloWorldGame # ...\n",
     "\n",
     "#    def intro(self):\n",
-    "#        ... overload ..."
+    "#        ... override ..."
    ]
   },
   {
@@ -989,7 +989,7 @@
     "editable": false
    },
    "source": [
-    "Implementing `GuessTheNumberGame` class is a crucial step which shows if you are able to read and implement given designs, as well as if you understand object-oriented relations such as inheritance and aggregation, including method overloading. Therefore, it is strongly recommended not to look at the solution, but make extra effort to implement it on your own. Once done, you can compare your solution with the one we had in mind, and note different programming styles."
+    "Implementing `GuessTheNumberGame` class is a crucial step which shows if you are able to read and implement given designs, as well as if you understand object-oriented relations such as inheritance and aggregation, including method overriding. Therefore, it is strongly recommended not to look at the solution, but make extra effort to implement it on your own. Once done, you can compare your solution with the one we had in mind, and note different programming styles."
    ]
   },
   {
@@ -1056,7 +1056,7 @@
    "source": [
     "<a id='t4p1botgame'></a>\n",
     "#### **▇▂ BotGame - Extra Practice ▂▂**\n",
-    "You can go further and use available classes to make a bot game - let computer generate a number and then try to guess it in given number of attempts. Easier option is to follow the same approach like in the `GuessTheNumberGame` class above. But, for extra practice, try inheriting from `GuessTheNumberGame` class and only overload the methods that need to be changed."
+    "You can go further and use available classes to make a bot game - let computer generate a number and then try to guess it in given number of attempts. Easier option is to follow the same approach like in the `GuessTheNumberGame` class above. But, for extra practice, try inheriting from `GuessTheNumberGame` class and only override the methods that need to be changed."
    ]
   },
   {
