--- a/ipynb/T03-OOP-in-Python-Part-2.ipynb
+++ b/ipynb/T03-OOP-in-Python-Part-2.ipynb
@@ -620,7 +620,7 @@
     "        self.program = program\n",
     "\n",
     "    def greeting(self):\n",
-    "        print(\"Hi! I am \" + self.firstname + \", and I study at \" + self.program + \".\")\n",
+    "        print(\"Hi! I am \" + self.firstname + \", and I study \" + self.program + \".\")\n",
     "        "
    ]
   },
