--- a/ipynb/T05-OOP-in-Python-Part-3.ipynb
+++ b/ipynb/T05-OOP-in-Python-Part-3.ipynb
@@ -49,7 +49,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<br><br><a id='t5recall'></a>\n",
     "## ▙▂ **🅁ECALL ▂▂**"
@@ -636,7 +639,7 @@
     "     def type(self): \n",
     "       print(\"Fruit\") \n",
     "    \n",
-    "    def color(self): \n",
+    "     def color(self): \n",
     "       print(\"Green\") "
    ]
   },
@@ -887,12 +890,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
-    "We can change the meaning of an operator in Python depending upon the operands used.\n",
+    "We can change the meaning of an operator in Python depending upon the operands used. This will be discussed in more details in Lesson 8.\n",
     "\n",
     "Example:\n",
     "\n",
