--- a/ipynb/T10-Files-in-Python-Part-1.ipynb
+++ b/ipynb/T10-Files-in-Python-Part-1.ipynb
@@ -121,11 +121,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>What if we wanted to read only the second character from the file? We can change the file cursor position for that purpose:\n",
+    "<br>What if we wanted to read only the second character from the file? We can change the file cursor position for that purpose.<br>Modify the previous example to read only the second character from the file. Use the \"seek()\"method for that. Type your answer below:\n",
     "\n",
-    "Question: what shall be the numerical argument for the \"seek()\" method to read the second character?\n",
-    "\n",
-    "<i>(Tip: the argument for \"seek\" considers the first character position as 0.)</i>\n",
+    "<i>(Question: what shall be the numerical argument for the \"seek()\" method to read the second character?)</i>\n",
+    "<br><i>(Tip: the argument for \"seek\" considers the first character position as 0.)</i>\n",
     "<br><i>Try to do this first without checking the solution in the next cell. After typing your code, compare it with the solution. </i>"
    ]
   },
@@ -195,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "f = open(\"RotterdamUAS.txt\")\n",
@@ -211,7 +212,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's read the <b>first</b> 10 characters from the file:"
+    "Modify the previous exercise to read the first 10 characters from the file. Type your answer below:\n",
+    "\n",
+    "<br><i>Try to do this first without checking the solution in the next cell. After typing your code, compare it with the solution. </i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Type your code here\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><i>Solution"
    ]
   },
   {
@@ -336,7 +358,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "print(f\"The result is:\\n{result}\")"
@@ -384,7 +406,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "f = open(\"LatestResult01.txt\", \"w\")\n",
@@ -465,7 +487,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "#Output to screen\n",
@@ -559,7 +581,7 @@
     "f.close()\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "print(f\"The result is:\\n{result}\")"
@@ -569,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modify the program above so that it only reads the first value from the file \"File01.txt\", and reads the second value from the keyboard. Everything else remains the same."
+    "Let's modify the program above so that it only reads the first value from the file \"File01.txt\", and reads the second value from the keyboard. Everything else remains the same."
    ]
   },
   {
@@ -585,7 +607,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "print(f\"The result is:\\n{result}\")"
@@ -632,7 +654,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "#Output to screen\n",
@@ -711,7 +733,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "#Output to screen\n",
@@ -751,7 +773,7 @@
     "value02 = int(input(\"Type the second number:\"))\n",
     "\n",
     "#Calculation\n",
-    "result = int(value01) + int(value02)\n",
+    "result = value01 + value02\n",
     "\n",
     "#Output\n",
     "#Output to screen\n",
@@ -762,6 +784,115 @@
     "        f2.write(f\"The result is:\\n{result}\")\n",
     "except OSError:\n",
     "    print('error opening LatestResult01.txt for writing')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the code cell below in order to write the names of all 5 countries from the provided list into a file called \"country.txt\" (each country name in a separate line), as shown below.\n",
+    "<br>If the file does not exist it should be created. If it already exists, it should be overwritten.\n",
+    "<br><i>Try to do this first without checking the solution in the next cell. After typing your code, compare it with the solution. </i>\n",
+    "<br><i>You can use the cell below it to verify all the contents of the file \"country.txt\", if it exists</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_list = ['Netherlands', 'Germany', 'Switzerland', 'France', 'Italy']\n",
+    "\n",
+    "with # remove this comment and write your code here\n",
+    "    for country in country_list:\n",
+    "        f.write(country)\n",
+    "        f.write('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell below can be used to verify all the contents of the file \"country.txt\", if it exists:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"country.txt\")\n",
+    "text = f.read()\n",
+    "f.close()\n",
+    "print(f\"The full text in the file is:\\n\\n{text}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><i> Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_list = ['Netherlands', 'Germany', 'Switzerland', 'France', 'Italy']\n",
+    "\n",
+    "with open(\"country.txt\", 'w') as f:\n",
+    "    for country in country_list:\n",
+    "        f.write(country)\n",
+    "        f.write('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the code cell below to add two other countries to the same file.\n",
+    "<br><i>Try to do this first without checking the solution in the next cell. After typing your code, compare it with the solution. </i>\n",
+    "<br><i>You can use the cell above it to verify all the contents of the file \"country.txt\", if it exists</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_country_list = ['Belgium', 'Spain']\n",
+    "\n",
+    "# remove this comment and write your code here\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><i> Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_country_list = ['Belgium', 'Spain']\n",
+    "\n",
+    "with open(\"country.txt\", 'a') as f:\n",
+    "    for country in extra_country_list:\n",
+    "        f.write(country)\n",
+    "        f.write('\\n')\n"
    ]
   },
   {
@@ -792,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
