--- a/ipynb/T10-Files-in-Python-Part-1.ipynb
+++ b/ipynb/T10-Files-in-Python-Part-1.ipynb
@@ -264,6 +264,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Other ways to read from a file:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see other ways to read file contents. For the next few examples we will use the \"Lines.txt\" file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can check the full contents of the file \"Lines.txt\" by opening it in your file system or by executing the code cell below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"Lines.txt\")\n",
+    "text = f.read()\n",
+    "f.close()\n",
+    "print(f\"The full text in the file is:\\n\\n{text}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The <i>readline()</i> method returns one line, starting from the current position of the file cursor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"Lines.txt\")\n",
+    "line1 = f.readline()\n",
+    "line2 = f.readline()\n",
+    "f.close()\n",
+    "print(line1)\n",
+    "print(line2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If a non-negative numerical argument is provided to the <i>readline()</i> method, it corresponds to the maximum byte count (including the trailing newline) to be read."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### A for loop can also be used to read a file content line by line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"Lines.txt\")\n",
+    "for templine in f:\n",
+    "    print(templine)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The <i>readlines()</i> method returns a list of remaining lines of the entire file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"Lines.txt\")\n",
+    "lines = f.readlines()\n",
+    "f.close()\n",
+    "print(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If a numerical argument is provided to <i>readlines()</i>, it corresponds to the number of bytes to be read (possibly after rounding up to an internal buffer size)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<i> Students are encouraged to check the textbooks and the python documentation for more details on the arguments and usage of commands and methods.</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='t1cls'></a>\n",
     "## ▙▂ **Part 2: Writing to a File ▂▂**"
    ]
