--- a/ipynb/db_show.ipynb
+++ b/ipynb/db_show.ipynb
@@ -20,136 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   sqlite://\n",
-      " * sqlite:///mycompany.db\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>username</th>\n",
-       "        <th>password</th>\n",
-       "        <th>name</th>\n",
-       "        <th>admin</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>bob</td>\n",
-       "        <td>123</td>\n",
-       "        <td>bob</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>mike</td>\n",
-       "        <td>123</td>\n",
-       "        <td>mike</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>jane</td>\n",
-       "        <td>000</td>\n",
-       "        <td>jane</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>kim</td>\n",
-       "        <td>999</td>\n",
-       "        <td>kim</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('bob', '123', 'bob', 0),\n",
-       " ('mike', '123', 'mike', 1),\n",
-       " ('jane', '000', 'jane', 0),\n",
-       " ('kim', '999', 'kim', 0)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%sql select * from users"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   sqlite://\n",
-      " * sqlite:///mycompany.db\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>person_id</th>\n",
-       "        <th>lastname</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>1</td>\n",
-       "        <td>Mike</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>2</td>\n",
-       "        <td>Anne</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>3</td>\n",
-       "        <td>john</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>lili</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(1, 'Mike'), (2, 'Anne'), (3, 'john'), (4, 'lili')]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%sql select * from staff"
+    "%sql select * from client"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -168,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
